sync querty param: rename limit to page_size
